Lab/k8s_with_contrail/lab_exercise/lab1/ambassador/lab1_ingress_amb.yaml
---
#Ingress using ambassador
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress3
  annotations:
     kubernetes.io/ingress.class: ambassador
spec:
  # ingressClassName: ambassador
  rules:
  - host: www.domain1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver3d
            port:
              number: 80
  - host: www.domain2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver3e
            port:
              number: 80
  - host: "*.domain3.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver3f
            port:
              number: 80
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: webserver3b
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: webserver3c
            port:
              number: 80
  defaultBackend:
    service:
      name: webserver3a
      port: 
        number: 80
